完成新单词库的导入以及修改判断的算法

--- a/config/db.properties
+++ b/config/db.properties
@@ -10,8 +10,12 @@ password=tiger
 #user=root
 #password=123456
 
+#Connection Pools
 initial.size=2
 max.active=5
 max.idle=2
 max.wait=3000
+
+#页面显示的配置项
+page.size=15
 
